[gd_scene load_steps=5 format=3 uid="uid://cwlq1yqdf5rtk"]

[ext_resource type="Theme" uid="uid://c78csml3a1r6k" path="res://Langdocs/new_theme.tres" id="1_22mxp"]
[ext_resource type="Script" path="res://Langdocs/prog_58b.gd" id="1_g8i6c"]

[sub_resource type="LabelSettings" id="LabelSettings_pusn8"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_kbhvp"]
font_size = 30

[node name="prog58b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8i6c")

[node name="txtA" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 452.0
offset_top = 40.0
offset_right = 964.0
offset_bottom = 112.0

[node name="txtB" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 452.0
offset_top = 125.0
offset_right = 964.0
offset_bottom = 197.0

[node name="txtC" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 454.0
offset_top = 211.0
offset_right = 966.0
offset_bottom = 283.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 81.0
offset_right = 409.0
offset_bottom = 232.0
text = "Enter Numbers Here:"
label_settings = SubResource("LabelSettings_pusn8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 316.0
offset_right = 438.0
offset_bottom = 467.0
text = "Root:"
label_settings = SubResource("LabelSettings_pusn8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 521.0
offset_right = 448.0
offset_bottom = 624.0
theme = ExtResource("1_22mxp")
text = "CALCULATE"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 692.0
offset_top = 519.0
offset_right = 1121.0
offset_bottom = 622.0
theme = ExtResource("1_22mxp")
text = "CLEAR"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 1032.0
offset_top = 14.0
offset_right = 1145.0
offset_bottom = 124.0
theme = ExtResource("1_22mxp")
text = "EXIT"

[node name="Output" type="Label" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 312.0
offset_right = 977.0
offset_bottom = 482.0
text = "()"
label_settings = SubResource("LabelSettings_kbhvp")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
